--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         position: absolute;
         display: inline-block;
         width: fit-content;
-        bottom: 6.5rem;
+        bottom: 6.1rem;
         left: 0;
         right: 0;
         margin: 0 auto;
@@ -38,10 +38,12 @@
       }
 
       .wanted-wrapper .money {
+        letter-spacing: 7px;
+        font-size: 2rem;
         position: absolute;
         display: inline-block;
         width: fit-content;
-        bottom: 1rem;
+        bottom: 3.6rem;
         left: 0;
         right: 0;
         margin: 0 auto;
@@ -50,9 +52,11 @@
 
       .photo-wrapper {
         position: absolute;
-        bottom: 1rem;
+        bottom: 13.3rem;
         left: 0;
         right: 0;
+        margin: 0 auto;
+        width: 82%;
       }
     </style>
   </head>
