--- a/index.html
+++ b/index.html
@@ -1,114 +1,142 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-TW">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
-
-    <title>鶴岡家 - 妙慧</title>
-
+    <title>Flip Card</title>
     <style>
-      html,
-      body {
+      .card {
+        width: 256px;
+        height: 384px;
+        perspective: 1000px;
+        cursor: pointer;
+        transition: all 0.3s;
+      }
+
+      .card:hover {
+        box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+      }
+
+      .card-inner {
+        position: relative;
         width: 100%;
         height: 100%;
+        transition: transform 0.5s;
+        transform-style: preserve-3d;
       }
 
-      .app-background {
-        background-color: antiquewhite;
-        max-width: 720px;
+      .card.flipped .card-inner {
+        transform: rotateY(180deg);
       }
-      .title {
-        color: #8b4513;
+
+      .front-side,
+      .back-side {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        backface-visibility: hidden;
+        border-radius: 0.5rem;
+        box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: box-shadow 0.3s;
       }
-      .wanted-wrapper {
+
+      .front-side {
+        background-image: url("./images/test.png");
+        background-size: 100%;
+        background-position: center;
+      }
+
+      .back-side {
+        background-image: url("./images/test2.png");
+        background-size: 100% 100%;
+        background-position: center;
+        background-repeat: no-repeat;
+        transform: rotateY(180deg);
+      }
+
+      .back-side::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.3);
+        backdrop-filter: blur(2px);
+      }
+
+      .back-content {
         position: relative;
+        z-index: 1;
+        text-align: center;
+        color: white;
       }
 
-      .wanted-wrapper .name {
-        position: absolute;
-        display: inline-block;
-        width: fit-content;
-        bottom: 6.1rem;
-        left: 0;
-        right: 0;
-        margin: 0 auto;
-        font-size: 3.2rem;
-        color: #4e3632;
+      .title {
+        font-size: 1.5rem;
+        font-weight: bold;
+        margin-bottom: 96px;
       }
 
-      .wanted-wrapper .money {
-        letter-spacing: 7px;
-        font-size: 2rem;
-        position: absolute;
-        display: inline-block;
-        width: fit-content;
-        bottom: 3.6rem;
-        left: 0;
-        right: 0;
-        margin: 0 auto;
-        color: #4e3632;
+      .subtitle {
+        font-size: 2.25rem;
+        font-weight: bold;
+        margin-bottom: 8px;
       }
 
-      .photo-wrapper {
-        position: absolute;
-        bottom: 13.3rem;
-        left: 0;
-        right: 0;
-        margin: 0 auto;
-        width: 82%;
+      .description {
+        font-size: 0.875rem;
+        font-weight: bold;
+      }
+
+      @keyframes float {
+        0% {
+          transform: translateY(0px);
+          box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.2);
+        }
+        50% {
+          transform: translateY(-10px);
+          box-shadow: 0 25px 15px 0px rgba(0, 0, 0, 0.1);
+        }
+        100% {
+          transform: translateY(0px);
+          box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.2);
+        }
+      }
+
+      .card:not(.flipped) {
+        animation: float 3s ease-in-out infinite;
+      }
+
+      .screen-center {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
       }
     </style>
   </head>
   <body>
-    <div class="m-auto h-full app-background">
-      <div class="title pt-4 mb-2 text-center">
-        <p class="text-lg bold">進入偉大的航道</p>
-        <p class="text-2xl bold" id="timer">1天5時10分59秒</p>
-
-        <small>
-          <i>鶴岡家 wanted you!</i>
-        </small>
-      </div>
-      <div class="wanted-wrapper">
-        <img class="w-full" src="./images/wanted.png" alt="wanted" />
-        <div class="photo-wrapper">
-          <img class="photo w-full" src="./images/photo.png" alt="photo" />
+    <div class="screen-center">
+      <div class="card" onclick="this.classList.add('flipped')">
+        <div class="card-inner">
+          <div class="front-side"></div>
+          <div class="back-side">
+            <div class="back-content">
+              <h2 class="title">戰鬥邀請</h2>
+              <h4 class="subtitle">搖搖薯條</h4>
+              <p class="description">您已接受配對</p>
+            </div>
+          </div>
         </div>
-
-        <p class="name">妙妙</p>
-        <p class="money">5,000,000,000</p>
       </div>
     </div>
 
     <script>
-      (() => {
-        var timer = document.getElementById("timer");
-        var targetTime = new Date("2024/5/31 23:59:59").getTime();
-
-        function draw() {
-          var now = new Date().getTime();
-          var distance = targetTime - now;
-
-          var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-          var hours = Math.floor(
-            (distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60)
-          );
-          var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-          var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-          timer.innerHTML =
-            days + "天" + hours + "時" + minutes + "分" + seconds + "秒";
-        }
-
-        function startLoad() {
-          draw();
-          setTimeout(function () {
-            startLoad();
-          }, 1000);
-        }
-
-        startLoad();
-      })();
+      // No additional JavaScript needed as we're using the onclick attribute
     </script>
   </body>
 </html>
